--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
+    "@probot/serverless-gcf": "^0.2.0",
     "axios": "^0.19.0",
     "probot": "^7.2.0",
     "semver": "^6.1.1"
